# pulsar-function-wasm

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/: dependabot.yml
.github/workflows/: build-main.yml  build-pr.yml
etc/: eclipse-formatter-config.xml  license-formatting.xml  license.txt  pmd-ruleset.xml
gradle/: libs.versions.toml  publish.gradle  publishing-release-tasks.gradle  publishing-release.gradle  release.gradle  style.gradle  versions.gradle
hacks/: run.sh  run.yaml
src/main/java/com/github/lburgazzoli/pulsar/function/wasm/: WasmFunction.java  WasmFunctionException.java  WasmRecord.java  WasmRecordProcessor.java  WasmSupport.java
src/main/rust/: Cargo.toml
src/main/rust/src/: lib.rs
src/test/groovy/com/github/lburgazzoli/pulsar/function/wasm/: WasmFunctionTest.groovy
src/test/groovy/com/github/lburgazzoli/pulsar/function/wasm/support/: PulsarContainer.groovy  PulsarTestClient.groovy  PulsarTestSpec.groovy
src/test/resources/: functions.wasm  log4j2-test.xml
src/test/rust/: Cargo.toml  build.sh  functions.rs
